--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            background: blue url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main {
             background-color: aliceblue;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             text-align: justify;
@@ -29,7 +33,9 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi quam ex doloremque aliquid mollitia ab. Cupiditate, voluptatum nesciunt? Inventore eaque debitis dolores labore vero provident, impedit sit expedita voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, a laudantium! Cupiditate quos a consequuntur voluptates accusamus, est laborum eos labore ut nam veniam doloremque adipisci. Recusandae rerum explicabo repellat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nemo magnam, placeat laboriosam voluptatum, est vitae dolor incidunt obcaecati expedita aperiam doloribus. Omnis quos veritatis iste fugit, ea temporibus aliquid!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi quam ex doloremque aliquid mollitia ab. Cupiditate, voluptatum nesciunt? Inventore eaque debitis dolores labore vero provident, impedit sit expedita voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, a laudantium! Cupiditate quos a consequuntur voluptates accusamus, est laborum eos labore ut nam veniam doloremque adipisci. Recusandae rerum explicabo repellat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nemo magnam, placeat laboriosam voluptatum, est vitae dolor incidunt obcaecati expedita aperiam doloribus. Omnis quos veritatis iste fugit, ea temporibus aliquid!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi quam ex doloremque aliquid mollitia ab. Cupiditate, voluptatum nesciunt? Inventore eaque debitis dolores labore vero provident, impedit sit expedita voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, a laudantium! Cupiditate quos a consequuntur voluptates accusamus, est laborum eos labore ut nam veniam doloremque adipisci. Recusandae rerum explicabo repellat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nemo magnam, placeat laboriosam voluptatum, est vitae dolor incidunt obcaecati expedita aperiam doloribus. Omnis quos veritatis iste fugit, ea temporibus aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi quam ex doloremque aliquid mollitia ab. Cupiditate, voluptatum nesciunt? Inventore eaque debitis dolores labore vero provident, impedit sit expedita voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, a laudantium! Cupiditate quos a consequuntur voluptates accusamus, est laborum eos labore ut nam veniam doloremque adipisci. Recusandae rerum explicabo repellat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nemo magnam, placeat laboriosam voluptatum, est vitae dolor incidunt obcaecati expedita aperiam doloribus. Omnis quos veritatis iste fugit, ea temporibus aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sequi quam ex doloremque aliquid mollitia ab. Cupiditate, voluptatum nesciunt? Inventore eaque debitis dolores labore vero provident, impedit sit expedita voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, a laudantium! Cupiditate quos a consequuntur voluptates accusamus, est laborum eos labore ut nam veniam doloremque adipisci. Recusandae rerum explicabo repellat. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nemo magnam, placeat laboriosam voluptatum, est vitae dolor incidunt obcaecati expedita aperiam doloribus. Omnis quos veritatis iste fugit, ea temporibus aliquid!
+        </p>
     </main>
 </body>
 </html>
